# raytracer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json.example  CMakeUserPresets.json.example  LICENSE  README.md  imgui.ini  vcpkg.json
include/: bhv.h  camera.h  forward_declaration.h  graphic_presets.h  light.h  logger.h  main.h  managers.h  messages.h  object.h  opengl_include.h  options.h  ray.h  render.h  renderbufferpixelproxy.h  renderer.h  rtobject.h  structs.h  version_config.h  version_config.h.in
src/: bhv.cpp  box.cpp  camera.cpp  formatters.cpp  guimanager.cpp  intersection.cpp  light.cpp  main.cpp  object.cpp  objectmanager.cpp  plane.cpp  ray.cpp  render.cpp  renderbufferproxy.cpp  renderer.cpp  sphere.cpp  triangle.cpp
